[gd_scene load_steps=3 format=2]

[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Subs/FTQ_CustomLabel/FTQ_CustomLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/WSSS0202_EndingPanel/Subs/WSSS0202_EP_SceneBonusBlind/WSSS0202_EP_SceneBonusBlind.gd" type="Script" id=2]

[node name="WSSS0202_EP_SceneBonusBlind" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )

[node name="FTQ_Line01" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -380.0
margin_top = 100.0
margin_right = 380.0
margin_bottom = 140.0
default_font_size = 18

[node name="FTQ_Line02" parent="." instance=ExtResource( 1 )]
margin_left = 100.0
margin_top = 150.0
margin_right = 860.0
margin_bottom = 190.0
default_font_size = 18

[node name="FTQ_Line03" parent="." instance=ExtResource( 1 )]
margin_left = 100.0
margin_top = 200.0
margin_right = 860.0
margin_bottom = 240.0
default_font_size = 18

[node name="FTQ_Line04" parent="." instance=ExtResource( 1 )]
margin_left = 100.0
margin_top = 250.0
margin_right = 860.0
margin_bottom = 290.0
default_font_size = 18

[node name="FTQ_Line05" parent="." instance=ExtResource( 1 )]
margin_left = 100.0
margin_top = 300.0
margin_right = 860.0
margin_bottom = 340.0
default_font_size = 18
